# TABNotes.md

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: api.md
skill/scripts/: fetch_openapi.sh  publish_note.sh
src/: main.rs
static/: app.css  editor.js  footer.js  passkey.js
templates/: base.html  code_gate.html  dashboard.html  editor.html  login.html  not_found.html  note.html
