[package]
name = "tabnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
anyhow = "1"
argon2 = "0.5"
askama = "0.14"
axum = { version = "0.8", features = ["form", "json"] }
http = "1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
webauthn-rs = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
